--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -1,3 +1,6 @@
+// Put your custom CSS here, or alternatively, break it up into modules
+// and put in a sub-folder for better organisation (really depends on size/complexity of project)
+
 .wrapper {
 	@include outer-container;
 	word-wrap: break-word;
